# stupid

./: CMakeLists.txt  README.md  requirements.txt  setup.py
include/: stupid.h
src/: cic_grid.cpp  cic_grid.h  cosmology.cpp  cosmology.h  grid.cpp  grid.h  initial_conditions.cpp  initial_conditions.h  integrator.cpp  integrator.h  leapfrog_integrator.cpp  leapfrog_integrator.h  multidim_array.cpp  multidim_array.h  particle_list.cpp  particle_list.h  stupid.cpp  stupid.h  tsc_grid.cpp  tsc_grid.h  units.cpp  units.h  zeldovich_ics.cpp  zeldovich_ics.h
stupid/: __init__.py  stupid.py  stupid_wrapper.py  stupid_zeldovich_wrapper.py
stupid/viz_tools/: __init__.py  viz_tools.py
test/: test.cpp  test_cic_grid.cpp  test_fftw_multithreading.cpp  test_leapfrog_integrator.cpp  test_multidim_array.cpp  test_problems.cpp  test_tsc_grid.cpp
